--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,27 @@
         android:theme="@style/Theme.AplicativoAula"
         tools:targetApi="31">
         <activity
+            android:name=".ScrollViewActivity"
+            android:exported="false" />
+        <activity
+            android:name=".GridLayoutActivity"
+            android:exported="false" />
+        <activity
+            android:name=".TableLayoutActivity"
+            android:exported="false" />
+        <activity
+            android:name=".FrameLayoutActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ConstraintLayoutActivity"
+            android:exported="false" />
+        <activity
+            android:name=".RelativeLayoutActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LinearLayoutActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity2"
             android:exported="false" />
         <activity
