--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,9 @@
         android:theme="@style/Theme.AplicativoAula"
         tools:targetApi="31">
         <activity
+            android:name=".ThreadsActivity"
+            android:exported="false" />
+        <activity
             android:name=".InternacionalizacaoActivity"
             android:exported="false" />
         <activity
