--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -83,6 +84,21 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
+
+        <service
+            android:name=".ThreadsActivity$MeuServico"
+            android:icon="@drawable/ic_launcher_background"
+            android:label="Meu Servico"
+            android:process=":meu_processo"
+            tools:ignore="Instantiatable">
+        </service>
+        <!-- android:process=":meu_processo"-->
+
+        <service
+            android:name=".ThreadsActivity$MinhaIntentService"
+            tools:ignore="Instantiatable,MissingClass">
+    </service>
+
+</application>
 
 </manifest>
