--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
+        android:usesCleartextTraffic="true"
         android:name=".AppCanalComunicacao"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -31,6 +32,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AplicativoAula"
         tools:targetApi="31">
+        <activity
+            android:name=".ViaCepActivity"
+            android:exported="false" />
         <activity
             android:name=".NotificationActivity"
             android:exported="false" />
@@ -88,16 +92,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <service android:name=".NotificationActivity$BackgroundService" />
         <service
             android:name=".ThreadsActivity$MeuServico"
             android:icon="@drawable/ic_launcher_background"
             android:label="Meu Servico"
             android:process=":meu_processo"
-            tools:ignore="Instantiatable"></service> <!-- android:process=":meu_processo" -->
+            tools:ignore="Instantiatable" /> <!-- android:process=":meu_processo" -->
         <service
             android:name=".ThreadsActivity$MinhaIntentService"
-            tools:ignore="Instantiatable,MissingClass"></service>
+            tools:ignore="Instantiatable,MissingClass" />
     </application>
 
 </manifest>
